--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CDV</title>
+  <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
   <p>Welcome to GIT CDV treining for web devs</p>  
